# mysqldualconnection

./: .gitignore  CMakeLists.txt  MySQLDualConnection.pro  README.md  embdriver.cpp  embdriver.h  main.cpp  mydbconn.cpp  mydbconn.h  remote_schema.sql
cmake/: .FindMySQLEmbedded.cmake.kate-swp  FindMySQLEmbedded.cmake  Findaio.cmake  Findcrypt.cmake  Finddl.cmake  Findpthread.cmake  Findrt.cmake  Findz.cmake
embdbtest/: aria_log.00000001  aria_log_control
embdbtest/embtest/: embtable.MYD  embtable.MYI  embtable.frm
embdbtest/share/: my-huge.cnf  my-innodb-heavy-4G.cnf  my-large.cnf  my-medium.cnf  my-small.cnf  mysql.server
embdbtest/share/czech/: errmsg.sys
embdbtest/share/danish/: errmsg.sys
embdbtest/share/dutch/: errmsg.sys
embdbtest/share/estonian/: errmsg.sys
embdbtest/share/french/: errmsg.sys
embdbtest/share/german/: errmsg.sys
embdbtest/share/greek/: errmsg.sys
embdbtest/share/hungarian/: errmsg.sys
embdbtest/share/italian/: errmsg.sys
embdbtest/share/japanese/: errmsg.sys
embdbtest/share/korean/: errmsg.sys
embdbtest/share/norwegian/: errmsg.sys
embdbtest/share/norwegian-ny/: errmsg.sys
embdbtest/share/polish/: errmsg.sys
embdbtest/share/portuguese/: errmsg.sys
embdbtest/share/romanian/: errmsg.sys
embdbtest/share/russian/: errmsg.sys
embdbtest/share/serbian/: errmsg.sys
embdbtest/share/slovak/: errmsg.sys
embdbtest/share/spanish/: errmsg.sys
embdbtest/share/swedish/: errmsg.sys
embdbtest/share/ukrainian/: errmsg.sys
