cmake_minimum_required (VERSION 2.6) 

PROJECT(MySQLDualConnection) 

SET(CMAKE_BUILD_TYPE "Release")

SET(CPACK_SOURCE_STRIP_FILES TRUE)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(MySQLEmbedded REQUIRED)

IF(NOT WIN32)
  FIND_PACKAGE(aio REQUIRED)
  FIND_PACKAGE(crypt REQUIRED)
  FIND_PACKAGE(pthread REQUIRED)
  FIND_PACKAGE(dl REQUIRED)
  FIND_PACKAGE(rt REQUIRED)  
  FIND_PACKAGE(z REQUIRED)
ENDIF(NOT WIN32)

SET(QT_USE_QTSQL TRUE)
SET(QT_USE_QTXML TRUE)
SET(QT_DONT_USE_QTGUI TRUE)

include_directories(${Qt5Sql_INCLUDES})
add_definitions(${Qt5Sql_DEFINITIONS})

include_directories(${Qt5Core_INCLUDES})
add_definitions(${Qt5Core_DEFINITIONS})

set(CMAKE_CXX_FLAGS "${Qt5Sql_EXECUTABLE_COMPILE_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${MYSQL_INCLUDE_DIR})

SET(MSQLDC_SOURCES main.cpp embdriver.cpp mydbconn.cpp)
SET(MSQLDC_HEADERS embdriver.h mydbconn.h)
QT5_WRAP_CPP(MSQLDC_HEADERS_MOC ${MSQLDC_HEADERS})

ADD_EXECUTABLE(mysqldualconnection ${MSQLDC_SOURCES} ${MSQLDC_HEADERS} ${MSQLDC_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(mysqldualconnection ${Qt5Core_LIBRARIES} ${Qt5Sql_LIBRARIES} ${MYSQL_LIBRARY} ${AIO_LIBRARY} ${CRYPT_LIBRARY} ${PTHREAD_LIBRARY} ${DL_LIBRARY} ${RT_LIBRARY} ${Z_LIBRARY})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(mysqldualconnection ${Qt5Core_LIBRARIES} ${Qt5Sql_LIBRARIES} ${MYSQL_LIBRARY})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES mysqldualconnection)
